BUILD fix installation scripts for GraalVM 19.3